# chip-sim

./: LICENSE  README.md  conftest.py  pyproject.toml  run_tests.ps1  run_tests.sh
.github/workflows/: full-gate.yml
chip/: README.md  __init__.py  breakdown.py  chip.ipynb  contact_resistance.py  coupling.py  czochralski.py  demo_beol_history.py  demo_car.py  demo_coupling.py  demo_defocus.py  demo_device.py  demo_device_2d.py  demo_diffusion_highconc.py  demo_doping_history.py  demo_highk_history.py  demo_implant.py  demo_junction.py  demo_lateral_diffusion.py  demo_litho.py  demo_litho_history.py  demo_locos_history.py  demo_metallization_history.py  demo_oxidation.py  demo_oxidation_history.py  demo_peb.py  demo_resist_history.py  demo_silicide_history.py  demo_thin_oxide.py  demo_zernike.py  device.py  device_2d.py  diffusion_2d.py  diffusion_dopant.py  diffusion_highconc.py  doping_history.py  etch_deposition.py  gallery.py  high_k.py  history_gallery.py  (+17 more)
chip/tests/: test_breakdown.py  test_car.py  test_chip_notebook.py  test_contact_resistance.py  test_coupling.py  test_czochralski.py  test_defocus.py  test_demo_beol_history.py  test_demo_car.py  test_demo_coupling.py  test_demo_defocus.py  test_demo_device.py  test_demo_device_2d.py  test_demo_diffusion_highconc.py  test_demo_highk_history.py  test_demo_junction.py  test_demo_lateral_diffusion.py  test_demo_litho.py  test_demo_oxidation.py  test_demo_peb.py  test_demo_thin_oxide.py  test_demo_zernike.py  test_device.py  test_device_2d.py  test_diffusion_2d.py  test_diffusion_dopant.py  test_diffusion_highconc.py  test_doping_history.py  test_etch_deposition.py  test_gallery.py  test_high_k.py  test_history_gallery.py  test_implant.py  test_interconnect.py  test_junction.py  test_lifetime.py  test_litho.py  test_litho_history.py  test_locos_history.py  test_metallization_history.py  (+10 more)
docs/: fab-game.html  fab-game.local.html  history.html  history.local.html  index.html  index.local.html  roadmap.html  roadmap.local.html
docs/decisions/: 0003-test-execution-policy.md  0004-unfreeze-engine.md  0005-fab-game-layering.md
docs/plans/: beol-interconnect-f4.md  coupling-moving-grid-v12.md  device-targets.md  fab-game-tui.md  fab-game.md  fab-journey.md  future-steps.md  high-k-metal-gate-f3.md  historical-modes-a1.md  historical-modes.md  ion-implantation.md  microchip-fabrication.md  peppy-chasing-conway.md  scope-edge-backlog.md  silicide-contact-f2.md
engines/: __init__.py
engines/diffusion/: CONTRACT.md  README.md  __init__.py  diffusion1d.py  diffusion2d.py
engines/diffusion/tests/: test_conservation.py  test_diffusion2d.py  test_explicit.py  test_nonlinear_d.py  test_robin_heat.py  test_source.py  test_stability.py  test_time_order.py  test_variable_d.py
fab_game/: README.md  __init__.py  dashboard.py  defects.py  demo_boule.py  demo_crystal_growth.py  demo_dislocation.py  demo_etch.py  demo_fab_game.py  demo_game.py  demo_internal_gettering.py  demo_journey.py  demo_lifetime.py  demo_osf_ring.py  demo_packaging.py  demo_purification.py  demo_reverse_recovery.py  demo_stefan.py  demo_thermal_budget.py  demo_thermal_donors.py  demo_under_etch.py  demo_voronkov.py  demo_wafer_prep.py  fab_game.ipynb  gallery.py  game.py  guide.py  journey.py  pipeline.py  plots.py  recipe.py  scoring.py  session_view.py  spec.py  state.py  steps.py  targets.py  tui.py  variation.py
fab_game/tests/: test_bookkeeping.py  test_boule.py  test_contamination.py  test_crystal_growth.py  test_dashboard.py  test_defects.py  test_demo_boule.py  test_demo_crystal_growth.py  test_demo_dislocation.py  test_demo_etch.py  test_demo_fab_game.py  test_demo_game.py  test_demo_internal_gettering.py  test_demo_journey.py  test_demo_lifetime.py  test_demo_osf_ring.py  test_demo_packaging.py  test_demo_purification.py  test_demo_reverse_recovery.py  test_demo_stefan.py  test_demo_thermal_budget.py  test_demo_thermal_donors.py  test_demo_under_etch.py  test_demo_voronkov.py  test_demo_wafer_prep.py  test_determinism.py  test_dislocation.py  test_etch.py  test_gallery.py  test_game.py  test_gate_dielectric.py  test_geometry.py  test_guide.py  test_import_direction.py  test_interconnect_binning.py  test_internal_gettering.py  test_journey.py  test_leakage.py  test_na_ring.py  test_osf_ring.py  (+13 more)
memory/: MEMORY.md  aluminium-spiking-source.md  avalanche-breakdown-source.md  beol-interconnect-source.md  chip-coupling-v12.md  chip-device-2d-v111.md  chip-highconc-v13.md  chip-notebook-flake.md  commit-at-end-of-batch.md  deal-grove-oxidation-source.md  device-targets-plan.md  dopant-charge-state-diffusivity-source.md  dopant-diffusivity-source.md  dopant-mobility-source.md  dopant-segregation-source.md  dopant-solid-solubility-source.md  engine-explicit-stepping-v16.md  engine-unfrozen.md  fab-game-a1.md  fab-game-a2.md  fab-game-c1.md  fab-game-cg1.md  fab-game-cg2.md  fab-game-cg3.md  fab-game-d1.md  fab-game-e1.md  fab-game-g1.md  fab-game-g2.md  fab-game-g3.md  fab-game-g4.md  fab-game-g4b.md  fab-game-g5.md  fab-game-g6.md  fab-game-g7.md  fab-game.md  fab-journey.md  gallery-local-edition.md  gradual-failure-preferred.md  high-k-dielectric-source.md  high-k-gate-f3.md  (+31 more)
