# Build config exists for ONE consumer: full-gate CI (`pip install -e .[…]` to pull the
# optional stacks). Local dev never installs — pytest's `pythonpath = ["."]` (below) puts
# the repo root on sys.path, so `engines.*` / `chip.*` import without a build step. The
# flat layout has two top-level packages, which setuptools won't auto-discover, so name them
# explicitly here (else `pip install -e .` fails with "Multiple top-level packages discovered").
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engines*", "chip*"]

[project]
name = "chip-sim"
version = "0.1.0"
description = "Educational microchip-fabrication simulator on a frozen, separately-validated diffusion solver engine."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# pytest-xdist parallelises the fast lane (`-n auto`): ~26 s serial → ~11 s on this box.
# See the gate-runner comment below for the one constraint — the slow notebook test must
# NOT be co-scheduled under xdist (it stays serial; the pin).
test = ["pytest>=7.0", "pytest-xdist>=3"]
# Visualization is opt-in (ADR 0002): the compute core and the test suite stay
# headless/matplotlib-free; only the render layer (chip/plots.py, demos, the notebook)
# needs this. Install with `pip install -e .[viz]`.
viz = ["matplotlib>=3.7"]
# The teaching notebook (chip.ipynb) is opt-in. This extra carries two things: (1) jupyterlab —
# the interactive frontend a human opens the notebook in (`jupyter lab chip/chip.ipynb`); and
# (2) the headless run stack — ipywidgets (the live sliders) + nbclient/nbformat/ipykernel — which
# the execution smoke-test (chip/tests/test_chip_notebook.py) uses to run the notebook without a
# browser. matplotlib stays in [viz], so the full runnable combo is `pip install -e .[viz,notebook]`.
# The committed suite stays notebook-free regardless (the smoke-test is slow-marked and
# importorskip/kernelspec-gated, and self-skips under CI — see the test docstring).
notebook = ["jupyterlab>=4", "ipywidgets>=8", "nbclient", "nbformat", "ipykernel"]

# Single-command test runner config. `pythonpath = ["."]` puts the repo root on
# sys.path so tests import the engine as `engines.diffusion...` (and the project as
# `chip...`) without an install step.
#
# Tiered gate (ADR 0003): the routine local gate is the fast lane
#   `pytest -m "not slow" -n auto`   — the always-on suite (254 tests, ~16 s parallel / ~53 s serial)
#   `pytest`                         — the full gate, SERIAL (adds the slow notebook smoke-test)
# `slow` marks the handful of tests that drive a live kernel / subprocess (the notebook execution).
#
# Parallelism (pytest-xdist, ADR 0003 amendment 2026-06-11): `-n auto` is the *blessed
# command*, deliberately NOT baked into `addopts` — that would force xdist onto single-test
# debugging (breaks `-s`/pdb, spawns workers for one test) and onto the full gate. Add it on
# the command line; `-n0` disables it.
#
# WORKER CAP: `conftest.py` caps `-n auto` at HALF the logical cores (its
# `pytest_xdist_auto_num_workers` hook). The suite floors on one ~3.9 s module, so the back half of
# the cores buys ~nothing — that Amdahl floor is the SOLE reason for the cap. It is not a knob for
# the notebook (the hook fires only on the fast lane, where the notebook is deselected — see THE
# PIN). Adaptive, so CI runners and dev boxes both do the right thing; `-n <N>` overrides.
#
# GROUPING: slow/kernel tests carry `@pytest.mark.xdist_group("slow")`, so under `--dist loadgroup`
# they share ONE worker — at most one live Jupyter kernel at a time. Infrastructure for *several*
# slow tests; today there is exactly one (the notebook), so it changes nothing in a blessed command.
#
# THE PIN — why `-n auto` rides ONLY the fast lane: the slow notebook smoke-test drives a live
# Jupyter kernel over a zmq/asyncio comms layer that races under load (it hangs ~80 % in CI). A
# parallel full gate (notebook co-scheduled under xdist) was tried and REJECTED on measurement:
# even capped + grouped it flaked the notebook ~1-in-4 at 8 workers, and 2-in-6 at 4 workers (12
# idle cores) — fewer workers does not help and idle cores do not protect it (chip-notebook flake;
# an upstream bug, not ours). So parallelism is applied ONLY where `slow` is already deselected: the
# fast lane and CI (where the notebook self-skips). The local full gate stays bare serial `pytest`
# — the notebook NEVER runs under xdist in any blessed command, so the pin is structural.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["engines", "chip"]
addopts = "-q"
markers = [
    "slow: drives a live kernel / subprocess; deselect in the inner loop with -m 'not slow' (ADR 0003)",
]
